# py-fast

./: .gitignore  Makefile  README.md  pyproject.toml
src/fast_cipher/: __init__.py  aes.py  cipher.py  core.py  encoding.py  layers.py  params.py  prf.py  prng.py  sbox.py  types.py
src/fast_cipher/tokens/: __init__.py  alphabets.py  registry.py  scanner.py  transformer.py  types.py
tests/: test_cipher.py  test_cross_impl.py  test_tokens.py
