[project]
name = "fast-cipher"
version = "0.2.1"
description = "FAST format-preserving encryption cipher in pure Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=9.0.2"]

[build-system]
requires = ["uv_build>=0.10.10,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
